fixed links and added Index pages for Lectures, Current Topics, and Hands-On

--- a/handson/index.html
+++ b/handson/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" href="../img/favicon.ico" type="image/x-icon"/>
-    <title>CIT 82 - Current Topics</title>
+    <title>CIT 82 - Hands-On Week 2 - HTTP and Github Pages</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -19,9 +19,9 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
 
     <!-- Custom styles for this template -->
-    <link href="../css/clean-blog.min.css" rel="stylesheet" type="text/css">
+    <link href="../css/clean-blog.min.css" rel="stylesheet">
     <!-- Custom styles for this template -->
-    <link href="../css/style.css" rel="stylesheet" type="text/css">
+    <link href="../css/style.css" rel="stylesheet">
 
   </head>
 
@@ -39,7 +39,7 @@
               <a class="nav-link" href="../">Home</a>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="../lectures/index.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a class="nav-link dropdown-toggle" href="href="../lectures/index.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Lectures
                 </a>
                 <div class="dropdown-menu bg-secondary" aria-labelledby="navbarDropdown">
@@ -54,33 +54,33 @@
                 </div>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="../handson/index.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Hands-On
                 </a>
                 <div class="dropdown-menu bg-secondary" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="../handson/week1.html">Week 1 - Markdown</a>
-                  <a class="dropdown-item" href="../handson/week2.html">Week 2 - HTTP and Github Pages</a>
-                  <a class="dropdown-item" href="../handson/week3.html">Week 3 - Editor and Github Repos </a>
-                  <a class="dropdown-item" href="../handson/week4.html">Week 4 - Git Workflow and CSS Pages</a>
-                  <a class="dropdown-item" href="../handson/week5.html">Week 5 - Bootstrap, .gitignore, and branching</a>
-                  <a class="dropdown-item" href="../handson/week6.html">Week 6 - Copy Template and Build site </a>
-                  <a class="dropdown-item" href="../handson/week7.html">Week 7 - Create new page and a menu</a>
-                  <a class="dropdown-item" href="../handson/week8.html">Week 8 - Image Compression, build page, and Favicon </a>
+                  <a class="dropdown-item" href="week1.html">Week 1 - Markdown</a>
+                  <a class="dropdown-item" href="week2.html">Week 2 - HTTP and Github Pages</a>
+                  <a class="dropdown-item" href="week3.html">Week 3 - Editor and Github Repos </a>
+                  <a class="dropdown-item" href="week4.html">Week 4 - Git Workflow and CSS Pages</a>
+                  <a class="dropdown-item" href="week5.html">Week 5 - Bootstrap, .gitignore, and branching</a>
+                  <a class="dropdown-item" href="week6.html">Week 6 - Copy Template and Build site </a>
+                  <a class="dropdown-item" href="week7.html">Week 7 - Create new page and a menu</a>
+                  <a class="dropdown-item" href="week8.html">Week 8 - Image Compression, build page, and Favicon </a>
                 </div>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a class="nav-link dropdown-toggle" href="href="../current/index.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Current Topics
                 </a>
                 <div class="dropdown-menu bg-secondary" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="week1.html">Week 1 - Hello World!</a>
-                  <a class="dropdown-item" href="week2.html">Week 2 - Learn++ and HTTPS</a>
-                  <a class="dropdown-item" href="week3.html">Week 3 - Git, Command Line, and Microsoft</a>
-                  <a class="dropdown-item" href="week4.html">Week 4 - UTF8 and Web 2.0</a>
-                  <a class="dropdown-item" href="week5.html">Week 5 - Semantic Versioning and Project 0 (Draft)</a>
-                  <a class="dropdown-item" href="week6.html">Week 6 - Bootstrap Template and FTP!</a>
-                  <a class="dropdown-item" href="week7.html">Week 7 - Front-end Framework and Images!</a>
-                  <a class="dropdown-item" href="week8.html">Week 8 - Payment Gateway and Web Dev Builds</a>
+                  <a class="dropdown-item" href="../current/week1.html">Week 1 - Hello World!</a>
+                  <a class="dropdown-item" href="../current/week2.html">Week 2 - Learn++ and HTTPS</a>
+                  <a class="dropdown-item" href="../current/week3.html">Week 3 - Git, Command Line, and Microsoft</a>
+                  <a class="dropdown-item" href="../current/week4.html">Week 4 - UTF8 and Web 2.0</a>
+                  <a class="dropdown-item" href="../current/week5.html">Week 5 - Semantic Versioning and Project 0 (Draft)</a>
+                  <a class="dropdown-item" href="../current/week6.html">Week 6 - Bootstrap Template and FTP!</a>
+                  <a class="dropdown-item" href="../current/week7.html">Week 7 - Front-end Framework and Images!</a>
+                  <a class="dropdown-item" href="../current/week8.html">Week 8 - Payment Gateway and Web Dev Builds</a>
                 </div>
              </li>
              <li class="nav-item">
@@ -92,50 +92,49 @@
     </nav>
 
     <!-- Page Header -->
-    <header class="masthead" style="background-image: url('../img/home-bg.jpg')">
+    <header class="masthead" style="background-image: url('../img/github-min.png')">
       <div class="overlay"></div>
       <div class="container">
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
             <div class="site-heading">
-              <h1 class ="CT">CIT82 - Fall 2018</h1>
-              <h1 class = "CT">Current Topics</h1>
-              <span class="subheading"></span>
+              <h1>CIT 82 - Fall 2018</h1>
+              <span class="subheading">Current Topics</span>
             </div>
           </div>
         </div>
       </div>
     </header>
-
-    <!-- Footer -->
-    <footer>
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-8 col-md-10 mx-auto">
-            <ul class="list-inline text-center">
-              <li class="list-inline-item">
-                <a href="https://www.facebook.com/doug.loera">
-                  <span class="fa-stack fa-lg">
-                    <i class="fas fa-circle fa-stack-2x"></i>
-                    <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
-                  </span>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="https://github.com/dloera">
-                  <span class="fa-stack fa-lg">
-                    <i class="fas fa-circle fa-stack-2x"></i>
-                    <i class="fab fa-github fa-stack-1x fa-inverse"></i>
-                  </span>
-                </a>
-              </li>
-            </ul>
-            <p class="copyright text-muted">Created by: Doug Loera 2018</p>
+        
+        <!-- Footer -->
+        <footer>
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-8 col-md-10 mx-auto">
+                <ul class="list-inline text-center">
+                  <li class="list-inline-item">
+                    <a href="https://www.facebook.com/doug.loera">
+                      <span class="fa-stack fa-lg">
+                        <i class="fas fa-circle fa-stack-2x"></i>
+                        <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
+                      </span>
+                    </a>
+                  </li>
+                  <li class="list-inline-item">
+                    <a href="https://github.com/dloera">
+                      <span class="fa-stack fa-lg">
+                        <i class="fas fa-circle fa-stack-2x"></i>
+                        <i class="fab fa-github fa-stack-1x fa-inverse"></i>
+                      </span>
+                    </a>
+                  </li>
+                </ul>
+                <p class="copyright text-muted">Created by: Doug Loera 2018</p>
+              </div>
+            </div>
           </div>
-        </div>
-      </div>
-    </footer>
-    
+        </footer>
+
     <!-- Bootstrap core JavaScript -->
     <script src="../vendor/jquery/jquery.min.js"></script>
     <script src="../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
