updating current topics weeks

--- a/current/week1.html
+++ b/current/week1.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" href="../img/favicon.ico" type="image/x-icon"/>
-    <title>CIT 82 - Current Topics</title>
+    <title>CIT 82 - Current Topics - Week 1 - Hello World!</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -39,7 +39,7 @@
               <a class="nav-link" href="../">Home</a>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="../lectures/index.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a class="nav-link dropdown-toggle" href="../lectures/index.html" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">
                   Lectures
                 </a>
                 <div class="dropdown-menu bg-secondary" aria-labelledby="navbarDropdown">
@@ -54,7 +54,7 @@
                 </div>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="../handson/index.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a class="nav-link dropdown-toggle" href="../handson/index.html" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">
                   Hands-On
                 </a>
                 <div class="dropdown-menu bg-secondary" aria-labelledby="navbarDropdown">
@@ -69,7 +69,7 @@
                 </div>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a class="nav-link dropdown-toggle" href="index.html" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">
                   Current Topics
                 </a>
                 <div class="dropdown-menu bg-secondary" aria-labelledby="navbarDropdown">
@@ -98,14 +98,29 @@
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
             <div class="site-heading">
-              <h1 class ="CT">CIT82 - Fall 2018</h1>
-              <h1 class = "CT">Current Topics</h1>
-              <span class="subheading"></span>
+              <h1 class ="CT">CIT82 - Current Topics</h1>
+              <h1 class = "CT">Week 1</h1>
             </div>
           </div>
         </div>
       </div>
     </header>
+
+    <!-- Content -->
+    <article>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8 col-md-10 mx-auto">
+
+            <h2 class="section-heading">Hello World</h2>
+            <a href="../img/helloworld.jpg"><img src="../img/helloworld.jpg" height="288" width="512"></a>
+            <p>This was an introductory week, as it was the first one. Introduced myself in the following way: </p>
+            <p>My name is Douglas, though I prefer to be called Doug. I work for Fresno County Elections at the moment, and am looking to expand my skill set by taking classes. I do have a B.A. from UCLA in Philosophy and History, yet enjoy the IT field and am looking to move into something a little more computer-related than my current profession. I grew up here in Fresno, though I did move away for most of my late teens and early 20s and moved back a few years ago. </p>
+            <a href="../img/print screen wk1.png"><img src="../img/print screen wk1.png" height="288" width="512"></a>
+          </div>
+        </div>
+      </div>
+</article>
 
     <!-- Footer -->
     <footer>
