--- a/current/week5.html
+++ b/current/week5.html
@@ -39,7 +39,7 @@
               <a class="nav-link" href="../">Home</a>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="../lectures/index.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a class="nav-link dropdown-toggle" href="../lectures/index.html" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">
                   Lectures
                 </a>
                 <div class="dropdown-menu bg-secondary" aria-labelledby="navbarDropdown">
@@ -54,7 +54,7 @@
                 </div>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="../handson/index.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a class="nav-link dropdown-toggle" href="../handson/index.html" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">
                   Hands-On
                 </a>
                 <div class="dropdown-menu bg-secondary" aria-labelledby="navbarDropdown">
@@ -69,7 +69,7 @@
                 </div>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a class="nav-link dropdown-toggle" href="index.html" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">
                   Current Topics
                 </a>
                 <div class="dropdown-menu bg-secondary" aria-labelledby="navbarDropdown">
@@ -100,12 +100,31 @@
             <div class="site-heading">
               <h1 class ="CT">CIT82 - Current Topics</h1>
               <h1 class ="CT">Week 5</h1>
-              <span class="subheading">Semantic Versioning and Project 0 (Draft)</span>
             </div>
           </div>
         </div>
       </div>
     </header>
+
+    <!-- Content -->
+    <article>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8 col-md-10 mx-auto">
+            <h2 class="section-heading">Semantic Versioning and Project 0 (Draft)</h2>
+            <p>Week 5 discussed Semantic Versioning, or how software is numbered and chose a piece of software as an example. We then began thinking about this project 0, our final Project. </p>
+            <h3>Semantic Versioning</h3>
+            <p>
+                I used the software <a href= "https://ffmpeg.org/about.html">ffmpeg</a>, which I've been using over the years to record, convert, and stream audio and video. Depending on which options you compile the program with, it will usually be able to convert any video format ever used by a computer. I've been using it since creating videos when I was in high school, and have always paid attention to the project. We used to use RealPlayer (RealVideo, which is rarely used at all anymore) and MPEG2 back in the day, and then AVC came about, or h.264. Now with the advent, and increasing use, of h.265 or HEVC, ffmpeg remains as relevant as ever. I've been using this since around 2005 or so, and since it is largely command line (though many GUI programs do use FFMPEG as a backbone), I always created batch files in windows to automate the processes. FFMPEG just released 4.0 in April 2018, and is now on 4.0.2 released in July 2018.
+            </p>
+            <h3>Project 0 (Draft)</h3>
+            <p>
+                I like this idea. It's creating an active website trying to use the things that we have learned as a basis for organizing the content through which we learned. This honestly seems like a great assignment, it is both an active review of all the content that we go over through this class (especially since it is a relatively short class at 9 weeks) and implementing those ideas into a functional website. I will have to figure out how to organize it all, but I think it will give me the opportunity to explore some of the ideas that we have gone over in this class a little bit further. I think I'll want to make a standard page schema and then develop the content. While I think that developing the content will be a good exploration, trying to figure out the design of the pages using what we have learned in the class will be just as enjoyable.
+            </p>
+          </div>
+        </div>
+      </div>
+    </article>    
     
         <!-- Footer -->
         <footer>
