--- a/current/week7.html
+++ b/current/week7.html
@@ -39,7 +39,7 @@
               <a class="nav-link" href="../">Home</a>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="../lectures/index.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a class="nav-link dropdown-toggle" href="../lectures/index.html" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">
                   Lectures
                 </a>
                 <div class="dropdown-menu bg-secondary" aria-labelledby="navbarDropdown">
@@ -54,7 +54,7 @@
                 </div>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="../handson/index.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a class="nav-link dropdown-toggle" href="../handson/index.html" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">
                   Hands-On
                 </a>
                 <div class="dropdown-menu bg-secondary" aria-labelledby="navbarDropdown">
@@ -69,7 +69,7 @@
                 </div>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a class="nav-link dropdown-toggle" href="index.html" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">
                   Current Topics
                 </a>
                 <div class="dropdown-menu bg-secondary" aria-labelledby="navbarDropdown">
@@ -100,12 +100,35 @@
             <div class="site-heading">
               <h1 class ="CT">CIT82 - Current Topics</h1>
               <h1 class ="CT">Week 7</h1>
-              <span class="subheading">Front-end Framework and Images!</span>
             </div>
           </div>
         </div>
       </div>
     </header>
+
+    <!-- Content -->
+    <article>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8 col-md-10 mx-auto">
+
+            <h2 class="section-heading">Front-End Framework and images</h2>
+            <p>In week 7, we took a look at what is a Front-End Framework and each chose one to discuss. We then discussed our skills with images and how to resize/crop them</p>
+            <h3>Front-End Frameworks</h3>
+            <p>
+                I'll be doing <a href="https://milligram.io/">Milligram</a>. Milligram is a minimalist CSS framework that is currently on v1.3.0, which was released on 01/26/2017. This isn't just a UI framework, but is optimized to be quick and clean. When Gzipped, Milligram is only 2 kb, and around 10kb without compression. It uses font-family Roboto. The main issue with Milligram is that it isn't a particularly rich framework with a lot of content to work with. The more complex styled components are a bit lacking, which generally means that you have to write more of your own css or other sass files to get where you want your website to be. This kind of defeats the purpose of having a front-end framework, in my opinion, but it really depends on the user.  Overall, it is a slick, quick, and clean framework that is good building a simple site with a quick loading time. 
+            </p>
+            <h3>Images!</h3>
+            <p>
+                I've been working with images for a long time, editing them for work and my own personal use. I've used Photoshop whenever I have access to it, but it tends to be a bit expensive. Due to this, I tend to use GNU Image Manipulation Program (GIMP) for more advanced things and PhotoDemon, a portable, lightweight, and open source program for simple image editing. I usually use JPEG files as they tend to be smaller, but when you are editing them over and over it tends to degrade the image over time. I tend to use PNG files a bit more. Like a GIF, they allow for irregular image sizes by the use of transparaent space. JPGs tend to force a rectangle with visual whitepsace, while a PNG file will let you have transparent space to place images on top of one another or on a background. This makes them good for logos. Here are my three images: <br>
+                <p><img src="../img/img_crop.jpg" alt="Cropped Image" width="232" height="181"></p>
+                <p><img src="../img/img_opt.jpg" alt="Opt Image" width="452" height="254"></p>
+                <p><img src="../img/sm_Crop_resize.jpg" alt="Small Image" width="334" height="295"></p>
+            </p>
+          </div>
+        </div>
+      </div>
+    </article>    
 
     <!-- Footer -->
     <footer>
