--- a/current/index.html
+++ b/current/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" href="../img/favicon.ico" type="image/x-icon"/>
-    <title>CIT 82 - Lectures Week 3 - HTML Crash Course</title>
+    <title>CIT 82 - Current Topics</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -19,9 +19,9 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
 
     <!-- Custom styles for this template -->
-    <link href="../css/clean-blog.min.css" rel="stylesheet">
+    <link href="../css/clean-blog.min.css" rel="stylesheet" type="text/css">
     <!-- Custom styles for this template -->
-    <link href="../css/style.css" rel="stylesheet">
+    <link href="../css/style.css" rel="stylesheet" type="text/css">
 
   </head>
 
@@ -39,18 +39,18 @@
               <a class="nav-link" href="../">Home</a>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="index.html"" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                <a class="nav-link dropdown-toggle" href="../lectures/index.html" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">
                   Lectures
                 </a>
                 <div class="dropdown-menu bg-secondary" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="week1.html">Week 1 - About CIT 82 Technologies </a>
-                  <a class="dropdown-item" href="week2.html">Week 2 - Lynda.com - Web Technologies</a>
-                  <a class="dropdown-item" href="week3.html">Week 3 - HTML Crash Course </a>
-                  <a class="dropdown-item" href="week4.html">Week 4 - CSS Crash Course</a>
-                  <a class="dropdown-item" href="week5.html">Week 5 - Bootstrap Crash Course</a>
-                  <a class="dropdown-item" href="week6.html">Week 6 - Get to Know Your Template </a>
-                  <a class="dropdown-item" href="week7.html">Week 7 - Learn SEO, CMS, and Payments </a>
-                  <a class="dropdown-item" href="week8.html">Week 8 - eCommerce and the Cloud </a>
+                  <a class="dropdown-item" href="../lectures/week1.html">Week 1 - About CIT 82 Technologies </a>
+                  <a class="dropdown-item" href="../lectures/week2.html">Week 2 - Lynda.com - Web Technologies</a>
+                  <a class="dropdown-item" href="../lectures/week3.html">Week 3 - HTML Crash Course </a>
+                  <a class="dropdown-item" href="../lectures/week4.html">Week 4 - CSS Crash Course</a>
+                  <a class="dropdown-item" href="../lectures/week5.html">Week 5 - Bootstrap Crash Course</a>
+                  <a class="dropdown-item" href="../lectures/week6.html">Week 6 - Get to Know Your Template </a>
+                  <a class="dropdown-item" href="../lectures/week7.html">Week 7 - Learn SEO, CMS, and Payments </a>
+                  <a class="dropdown-item" href="../lectures/week8.html">Week 8 - eCommerce and the Cloud </a>
                 </div>
             </li>
             <li class="nav-item dropdown">
@@ -69,18 +69,18 @@
                 </div>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="../current/index.html" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                <a class="nav-link dropdown-toggle" href="index.html" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">
                   Current Topics
                 </a>
                 <div class="dropdown-menu bg-secondary" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="../current/week1.html">Week 1 - Hello World!</a>
-                  <a class="dropdown-item" href="../current/week2.html">Week 2 - Learn++ and HTTPS</a>
-                  <a class="dropdown-item" href="../current/week3.html">Week 3 - Git, Command Line, and Microsoft</a>
-                  <a class="dropdown-item" href="../current/week4.html">Week 4 - UTF8 and Web 2.0</a>
-                  <a class="dropdown-item" href="../current/week5.html">Week 5 - Semantic Versioning and Project 0 (Draft)</a>
-                  <a class="dropdown-item" href="../current/week6.html">Week 6 - Bootstrap Template and FTP!</a>
-                  <a class="dropdown-item" href="../current/week7.html">Week 7 - Front-end Framework and Images!</a>
-                  <a class="dropdown-item" href="../current/week8.html">Week 8 - Payment Gateway and Web Dev Builds</a>
+                  <a class="dropdown-item" href="week1.html">Week 1 - Hello World!</a>
+                  <a class="dropdown-item" href="week2.html">Week 2 - Learn++ and HTTPS</a>
+                  <a class="dropdown-item" href="week3.html">Week 3 - Git, Command Line, and Microsoft</a>
+                  <a class="dropdown-item" href="week4.html">Week 4 - UTF8 and Web 2.0</a>
+                  <a class="dropdown-item" href="week5.html">Week 5 - Semantic Versioning and Project 0 (Draft)</a>
+                  <a class="dropdown-item" href="week6.html">Week 6 - Bootstrap Template and FTP!</a>
+                  <a class="dropdown-item" href="week7.html">Week 7 - Front-end Framework and Images!</a>
+                  <a class="dropdown-item" href="week8.html">Week 8 - Payment Gateway and Web Dev Builds</a>
                 </div>
              </li>
              <li class="nav-item">
@@ -98,8 +98,9 @@
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
             <div class="site-heading">
-              <h1>CIT 82 - Lectures Week 3</h1>
-              <span class="subheading">HTML Crash Course</span>
+              <h1 class ="CT">CIT82 - Fall 2018</h1>
+              <h1 class = "CT">Current Topics</h1>
+              <span class="subheading"></span>
             </div>
           </div>
         </div>
@@ -112,14 +113,13 @@
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
 
-            <h2 class="section-heading">Heading</h2>
-
-            <p>Placeholder text </p>
+            <h2 class="section-heading">Explanation of the Current Topics</h2>
+            <p>For the Current Topics topics, we explored the different aspects of Web Technologies, such as what is UTF, HTTPS, etc. We also covered such as who we are, how to install git on our computers to push our code/markdown files to Github, among other things. Overall, they helped with discovering where the web is, and what is in the future. I enjoyed this section, as it helped put context in to why we should learn about the web, and who we were taking the classes with. The section also helped in seeing the different levels of understanding that our fellow classmates were at. </p>
           </div>
         </div>
       </div>
     </article>    
-    
+
     <!-- Footer -->
     <footer>
       <div class="container">
@@ -148,7 +148,7 @@
         </div>
       </div>
     </footer>
-
+    
     <!-- Bootstrap core JavaScript -->
     <script src="../vendor/jquery/jquery.min.js"></script>
     <script src="../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
