--- a/current/week3.html
+++ b/current/week3.html
@@ -39,7 +39,7 @@
               <a class="nav-link" href="../">Home</a>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="../lectures/index.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a class="nav-link dropdown-toggle" href="../lectures/index.html" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">
                   Lectures
                 </a>
                 <div class="dropdown-menu bg-secondary" aria-labelledby="navbarDropdown">
@@ -54,7 +54,7 @@
                 </div>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="../handson/index.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a class="nav-link dropdown-toggle" href="../handson/index.html" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">
                   Hands-On
                 </a>
                 <div class="dropdown-menu bg-secondary" aria-labelledby="navbarDropdown">
@@ -69,7 +69,7 @@
                 </div>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a class="nav-link dropdown-toggle" href="index.html" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">
                   Current Topics
                 </a>
                 <div class="dropdown-menu bg-secondary" aria-labelledby="navbarDropdown">
@@ -100,12 +100,33 @@
             <div class="site-heading">
               <h1 class ="CT">CIT82 - Current Topics</h1>
               <h1 class ="CT">Week 3</h1>
-              <span class="subheading"> Git, Command Line, and Microsoft</span>
             </div>
           </div>
         </div>
       </div>
     </header>
+
+    <!-- Content -->
+    <article>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8 col-md-10 mx-auto">
+            <h2 class="section-heading">Git, Command Line, and Microsoft</h2>
+            <p>In week 3, we covered how to install git and use the command line. Then we discussed how Microsoft purchased Github</p>
+            <h3>Install git and determine your command line interface</h3>
+            <p>
+              <a href="../img/git bash.jpg"><img src="../img/git bash.jpg" alt="Git Bash"></a>
+              I will be using git bash primarily through the VScode editor (alt+`). I have quite a lot of experience using command line and bash terminals. I first started on Windows 3.1 and Unix back when I was a little kid; my mother worked with computers and always had them around, so I had to learn it over the years. Eventually, I found that there are some pretty powerful things you can do with command line through the use of batch files in automation. At work I still use them quite regularly when dealing with a lot of files at once (such as mass rename, mass delete). I have been using for loops in *.bat files for the last 15 years in processing video files, audio files, images, and any other files where I don't want to have to go through things one at a time. It has helped in learning the basics of how a computer runs in the background and I've never had any problems with it.
+            </p>
+            <h3>Microsoft Purchases Github</h3>
+            <p>
+                <a href="http://techgenix.com/microsofts-github-acquisition/">Link to my article</a> <br>
+                One of the interesting parts of this article is the concept of ownership for code written through GitHub, and that some think that this will lead to Microsoft co-opting code written through the platform. However, this doesn't quite appear to be an actual concern, as a user does own all of their code in the repository, and can license it how they like (typically under an open-source license such as GPL3. Also, since Microsoft invested $7.5 billion into the platform, the ideal of how they are going to monetize the system further was an interesting part of the article. This was not a cheap acquisition of a company, but Microsoft appears to try to integrate GitHub with Azure and VScode and to what extent will this affect the platform.
+            </p>
+          </div>
+        </div>
+      </div>
+</article>    
 
         <!-- Footer -->
     <footer>
