--- a/current/week6.html
+++ b/current/week6.html
@@ -39,7 +39,7 @@
               <a class="nav-link" href="../">Home</a>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="../lectures/index.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a class="nav-link dropdown-toggle" href="../lectures/index.html" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">
                   Lectures
                 </a>
                 <div class="dropdown-menu bg-secondary" aria-labelledby="navbarDropdown">
@@ -54,7 +54,7 @@
                 </div>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="../handson/index.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a class="nav-link dropdown-toggle" href="../handson/index.html" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">
                   Hands-On
                 </a>
                 <div class="dropdown-menu bg-secondary" aria-labelledby="navbarDropdown">
@@ -69,7 +69,7 @@
                 </div>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a class="nav-link dropdown-toggle" href="index.html" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">
                   Current Topics
                 </a>
                 <div class="dropdown-menu bg-secondary" aria-labelledby="navbarDropdown">
@@ -92,7 +92,7 @@
     </nav>
 
     <!-- Page Header -->
-    <header class="masthead" style="background-image: url('../img/home-bg.jpg')">
+    <header class="masthead" style="background-image: url('../img/ftp.jpg')">
       <div class="overlay"></div>
       <div class="container">
         <div class="row">
@@ -100,12 +100,32 @@
             <div class="site-heading">
               <h1 class ="CT">CIT82 - Current Topics</h1>
               <h1 class ="CT">Week 6</h1>
-              <span class="subheading">Bootstrap Template and FTP!</span>
             </div>
           </div>
         </div>
       </div>
     </header>
+    
+    <!-- Content -->
+    <article>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8 col-md-10 mx-auto">
+
+            <h2 class="section-heading">Bootstrap Template and FTP!</h2>
+            <p>For Week 6, we began to take a look at Bootstrap Templates for our Project 0, and then discussed the File Transfer Protocol(FTP).</p>
+            <h3>Bootstrap Template</h3>
+            <p>
+                I chose the Clean Blog template from <a href="https://www.mockplus.com/blog/post/bootstrap-website-template">this website</a>. The design seems very straight forward and a bit intuitive. I was looking at another one from another website, but it seemed to already have too much information that I didn't want to have to overwrite/rework. I think the one that I chose will be a good starting point for me to add on as much as I like. It starts out with having 4 pages on it (index, about, contact, and post) for me to work with.  It's pretty interesting seeing everybody else's templates as well, as it seems that we'll all be pretty different. It did take awhile in trying to find one that has a good design and is pretty straight forward in regards to adding in my own information. There were a few where I enjoyed the design, but there was just too many elements to what I would like it to be. I'm more of a person who enjoys simplicity, rather than having my ideas be convoluted. Cheers.
+            </p>
+            <h3>File Transfer Protocol(FTP)</h3>
+            <p>
+                I've been using FTP servers for many many years. I used to host an FTP server on one of my old computers back in the early 2000s. Back when USB was in its early stages and was pretty slow, it was often faster to transfer things from one computer to another by creating an FTP Server on one computer, and download it on the other one. Everything was connected by wire, and at 100MBps router it was just a lot faster. We also used it to transfer files in between friends and I, when we wanted to share files with each other. It stands for File Transfer Protocol, and I used it to transfer around movies, video games, music, all kinds of things. Sometimes you can even find certain files by searching for FTP servers specifically on google, usually through the use of "Index Of", which is the default title when viewing an FTP server from a web browser. My resource is simply my own knowledge of using FTP for 20 years or so.
+            </p>
+          </div>
+        </div>
+      </div>
+    </article>    
         
     <!-- Footer -->
     <footer>
